--- a/dataTest.ipynb
+++ b/dataTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,21 +12,23 @@
     "from scipy import stats\n",
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
+    "import os\n",
     "\n",
-    "import pricingModel as pm\n",
-    "import others as others\n",
-    "import optionPricingFormulas2 as opf2\n",
-    "import riskFreeRate as rate"
+    "from price import pricingModel as pm\n",
+    "from price import others as others\n",
+    "from price import optionPricingFormulas2 as opf2\n",
+    "from price import riskFreeRate as rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def readData():\n",
-    "    sigmaData = pd.read_excel(\"sigmaData.xls\")\n",
+    "    sigmaDataPath = os.path.abspath(os.path.join(\"__file__\", \"../price/sigmaData.xls\"))\n",
+    "    sigmaData = pd.read_excel(sigmaDataPath)\n",
     "    sigmaData = sigmaData.where(sigmaData.notnull(), None)\n",
     "    defaultSigma = None\n",
     "    defaultTodayPrice = None ###########\n",
@@ -55,8 +57,8 @@
     "            else:\n",
     "                quantityDic[sigmaData[\"Unnamed: 1\"][i].split()[-1]] = defaultQuantity\n",
     "\n",
-    "\n",
-    "    data = pd.read_excel(\"historyData.xls\")\n",
+    "    historyDataPath = os.path.abspath(os.path.join(\"__file__\", \"../price/historyData.xls\"))\n",
+    "    data = pd.read_excel(historyDataPath)\n",
     "    data = data.where(data.notnull(), None)\n",
     "    data.drop([0], axis = 0, inplace = True) #inplace means data = data.changed\n",
     "    data.reset_index(drop = True, inplace = True)\n",
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,46 +142,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([173], dtype='int64')"
+       "Int64Index([19], dtype='int64')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[data[\"AGGREGATION BUNDLE\"] == \"19479580\"].index"
+    "data[data[\"AGGREGATION BUNDLE\"] == \"19581693\"].index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AGGREGATION BUNDLE                    19479580\n",
-       "Product Reference     JNNSH2019001-315.6.VCALL\n",
+       "AGGREGATION BUNDLE                    19581693\n",
+       "Product Reference     CSC2019014-3309.22.VCALL\n",
        "类型                                       VCALL\n",
        "Sub Type                              European\n",
        "涨跌                                        CALL\n",
        "欧式\\美式                                 European\n",
-       "WIND代码                                  AU1912\n",
+       "WIND代码                               000300.SH\n",
        "结构简称                                      None\n",
-       "期初定价日                      2019-06-27 00:00:00\n",
-       "期末定价日                      2019-09-25 00:00:00\n",
-       "期权费支付日                     2019-06-27 00:00:00\n",
-       "收益兑付日                      2019-09-27 00:00:00\n",
-       "计划期限                                        92\n",
-       "执行价格                                     315.6\n",
+       "期初定价日                      2019-07-05 00:00:00\n",
+       "期末定价日                      2019-08-05 00:00:00\n",
+       "期权费支付日                     2019-08-07 00:00:00\n",
+       "收益兑付日                      2019-08-07 00:00:00\n",
+       "计划期限                                        33\n",
+       "执行价格                                   3309.22\n",
        "上障碍                                       None\n",
        "下障碍                                       None\n",
        "上障碍价格                                        0\n",
@@ -187,12 +189,12 @@
        "Option Rebate                                0\n",
        "Digital amount                            None\n",
        "合约参与率                                     None\n",
-       "合同参与率                                     3.0%\n",
+       "合同参与率                                   100.0%\n",
        "绝对名义本金                                   10000\n",
-       "期初价格                                     315.6\n",
-       "期权费率                                   3.52178\n",
+       "期初价格                                    3893.2\n",
+       "期权费率                                   14.5002\n",
        "到期收益                                         0\n",
-       "数量                                     -455.23\n",
+       "数量                                    -5137.16\n",
        "Buy/Sell                                  Sell\n",
        "Start Date                                 NaT\n",
        "End Date                                  None\n",
@@ -200,40 +202,30 @@
        "REBATE Fee                                   0\n",
        "Coupon Dates                              None\n",
        "Callable Dates                            None\n",
-       "最高收益率                                    0.003\n",
-       "参考期现                                        91\n",
-       "k                                        315.6\n",
-       "startingPrice                            315.6\n",
-       "s0                                      316.35\n",
-       "sigma                                 0.144248\n",
-       "quantity                                455.23\n",
+       "最高收益率                                      0.3\n",
+       "参考期现                                        32\n",
+       "k                                      3309.22\n",
+       "startingPrice                           3893.2\n",
+       "s0                                     3802.79\n",
+       "sigma                                 0.202428\n",
+       "quantity                               5137.16\n",
        "buy                                      False\n",
        "price                                     None\n",
        "delta                                     None\n",
        "gamma                                     None\n",
        "vega                                      None\n",
        "theta                                     None\n",
-       "T                                           79\n",
-       "Name: 173, dtype: object"
+       "T                                           28\n",
+       "Name: 19, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.iloc[173]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#computePrice(data, dataType, indexToFind, timeShift, s0IsOne, rf, dt, s0Shock, sigmaShock)\n",
-    "[price_tmp, delta_tmp, gamma_tmp, vega_tmp, theta_tmp] = pm.computeCallData(data, 173, 0, False, 0.0245, 1/365, 1, 1)"
+    "data.iloc[19]"
    ]
   },
   {
@@ -275,175 +267,58 @@
     }
    ],
    "source": [
-    "ratePoints = [None, 0.0229471, 0.0250464, 0.0254817, 0.0255681, 0.0258563, 0.0263679, 0.0270334, 0.0279025, 0.0287345]\n",
+    "#ratePoints = [None, 0.0229471, 0.0250464, 0.0254817, 0.0255681, 0.0258563, 0.0263679, 0.0270334, 0.0279025, 0.0287345]\n",
     "rate.getRiskFreeRate(79, ratePoints)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.03073556982153795"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "price_tmp / data[\"startingPrice\"][173]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.02785589392303442"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "opf2.call(316.35, 315.6, 0.144248, 0.0245217, 79/365, q = 0.0245217) / data[\"startingPrice\"][173]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([146], dtype='int64')"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[data[\"AGGREGATION BUNDLE\"] == \"19577342\"].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AGGREGATION BUNDLE                  19577342\n",
-       "Product Reference     OTC2019109-46783.2.DBC\n",
-       "类型                                       DBC\n",
-       "Sub Type                             BARRIER\n",
-       "涨跌                                      CALL\n",
-       "欧式\\美式                               European\n",
-       "WIND代码                                CU1909\n",
-       "结构简称                                    None\n",
-       "期初定价日                    2019-07-05 00:00:00\n",
-       "期末定价日                    2019-08-05 00:00:00\n",
-       "期权费支付日                   2019-08-07 00:00:00\n",
-       "收益兑付日                    2019-08-07 00:00:00\n",
-       "计划期限                                      31\n",
-       "执行价格                                 46783.2\n",
-       "上障碍                                      OUT\n",
-       "下障碍                                      OUT\n",
-       "上障碍价格                                49099.2\n",
-       "下障碍价格                                43540.8\n",
-       "Option Rebate                      0.0116667\n",
-       "Digital amount                          None\n",
-       "合约参与率                                   None\n",
-       "合同参与率                                 150.0%\n",
-       "绝对名义本金                                 10000\n",
-       "期初价格                                   46320\n",
-       "期权费率                                0.762445\n",
-       "到期收益                                       0\n",
-       "数量                                   -113.08\n",
-       "Buy/Sell                                Sell\n",
-       "Start Date                               NaT\n",
-       "End Date                                None\n",
-       "Fixed Rate                              None\n",
-       "REBATE Fee                                 0\n",
-       "Coupon Dates                            None\n",
-       "Callable Dates                          None\n",
-       "最高收益率                                  0.075\n",
-       "参考期现                                      32\n",
-       "k                                    46783.2\n",
-       "startingPrice                          46320\n",
-       "s0                                     46390\n",
-       "sigma                               0.112579\n",
-       "quantity                              113.08\n",
-       "buy                                    False\n",
-       "price                                   None\n",
-       "delta                                   None\n",
-       "gamma                                   None\n",
-       "vega                                    None\n",
-       "theta                                   None\n",
-       "T                                         28\n",
-       "Name: 146, dtype: object"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.iloc[146]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_tmp, s0_tmp, T_tmp, barrierL_tmp, barrierU_tmp, rebate_tmp, sigma, amplifier = data.loc[146, [\"k\", \"s0\", \"T\", \"下障碍价格\", \n",
-    "                                                                                                     \"上障碍价格\", \n",
-    "                                                                                                     \"Option Rebate\", \"sigma\", \n",
-    "                                                                                                     \"合同参与率\"]]\n",
-    "sigma = sigma * 1\n",
-    "s0_tmp = s0_tmp * 1\n",
-    "a = float(amplifier[:-1]) / 100\n",
-    "a = 1\n",
-    "T_tmp = T_tmp - 0\n",
-    "T_tmp = T_tmp / 365\n",
-    "rebate_tmp = rebate_tmp * data[\"startingPrice\"][146] / a\n"
+    "#computePrice(data, dataType, indexToFind, timeShift, s0IsOne, rf, dt, s0Shock, sigmaShock)\n",
+    "[price_tmp, delta_tmp, gamma_tmp, vega_tmp, theta_tmp] = pm.computeCallData(data, 19, 0, False, 0.0229471, 1/365, 1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "320.2645305890063"
+       "-97.38940036742503"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opf2.dboc(s0_tmp, k_tmp, barrierL_tmp, barrierU_tmp, rebate_tmp, sigma, 0.0229471, T_tmp, 1/365, 0.0229471)"
+    "theta_tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12837124906080777"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_tmp / data[\"startingPrice\"][19]"
    ]
   },
   {
