--- a/dataTest.ipynb
+++ b/dataTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,157 +142,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([19], dtype='int64')"
+       "Int64Index([16], dtype='int64')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[data[\"AGGREGATION BUNDLE\"] == \"19581693\"].index"
+    "data[data[\"AGGREGATION BUNDLE\"] == \"19576695\"].index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AGGREGATION BUNDLE                    19581693\n",
-       "Product Reference     CSC2019014-3309.22.VCALL\n",
-       "类型                                       VCALL\n",
-       "Sub Type                              European\n",
-       "涨跌                                        CALL\n",
-       "欧式\\美式                                 European\n",
-       "WIND代码                               000300.SH\n",
-       "结构简称                                      None\n",
-       "期初定价日                      2019-07-05 00:00:00\n",
-       "期末定价日                      2019-08-05 00:00:00\n",
-       "期权费支付日                     2019-08-07 00:00:00\n",
-       "收益兑付日                      2019-08-07 00:00:00\n",
-       "计划期限                                        33\n",
-       "执行价格                                   3309.22\n",
-       "上障碍                                       None\n",
-       "下障碍                                       None\n",
-       "上障碍价格                                        0\n",
-       "下障碍价格                                        0\n",
-       "Option Rebate                                0\n",
-       "Digital amount                            None\n",
-       "合约参与率                                     None\n",
-       "合同参与率                                   100.0%\n",
-       "绝对名义本金                                   10000\n",
-       "期初价格                                    3893.2\n",
-       "期权费率                                   14.5002\n",
-       "到期收益                                         0\n",
-       "数量                                    -5137.16\n",
-       "Buy/Sell                                  Sell\n",
-       "Start Date                                 NaT\n",
-       "End Date                                  None\n",
-       "Fixed Rate                                None\n",
-       "REBATE Fee                                   0\n",
-       "Coupon Dates                              None\n",
-       "Callable Dates                            None\n",
-       "最高收益率                                      0.3\n",
-       "参考期现                                        32\n",
-       "k                                      3309.22\n",
-       "startingPrice                           3893.2\n",
-       "s0                                     3802.79\n",
-       "sigma                                 0.202428\n",
-       "quantity                               5137.16\n",
-       "buy                                      False\n",
-       "price                                     None\n",
-       "delta                                     None\n",
-       "gamma                                     None\n",
-       "vega                                      None\n",
-       "theta                                     None\n",
-       "T                                           28\n",
-       "Name: 19, dtype: object"
+       "AGGREGATION BUNDLE                  19576695\n",
+       "Product Reference     OTC2019111-412.205.UOC\n",
+       "类型                                       UOC\n",
+       "Sub Type                             BARRIER\n",
+       "涨跌                                      CALL\n",
+       "欧式\\美式                               European\n",
+       "WIND代码                                SC1911\n",
+       "结构简称                                    None\n",
+       "期初定价日                    2019-07-05 00:00:00\n",
+       "期末定价日                    2019-10-08 00:00:00\n",
+       "期权费支付日                   2019-10-10 00:00:00\n",
+       "收益兑付日                    2019-10-10 00:00:00\n",
+       "计划期限                                      95\n",
+       "执行价格                                 412.205\n",
+       "上障碍                                      OUT\n",
+       "下障碍                                     None\n",
+       "上障碍价格                                 498.98\n",
+       "下障碍价格                                      0\n",
+       "Option Rebate                              0\n",
+       "Digital amount                          None\n",
+       "合约参与率                                   None\n",
+       "合同参与率                                 100.0%\n",
+       "绝对名义本金                                 10000\n",
+       "期初价格                                   433.9\n",
+       "期权费率                                    2.72\n",
+       "到期收益                                       0\n",
+       "数量                                   -874.92\n",
+       "Buy/Sell                                Sell\n",
+       "Start Date                               NaT\n",
+       "End Date                                None\n",
+       "Fixed Rate                              None\n",
+       "REBATE Fee                                 0\n",
+       "Coupon Dates                            None\n",
+       "Callable Dates                          None\n",
+       "最高收益率                                    0.2\n",
+       "参考期现                                      96\n",
+       "k                                    412.205\n",
+       "startingPrice                          433.9\n",
+       "s0                                     442.7\n",
+       "sigma                               0.312545\n",
+       "quantity                              874.92\n",
+       "buy                                    False\n",
+       "price                                   None\n",
+       "delta                                   None\n",
+       "gamma                                   None\n",
+       "vega                                    None\n",
+       "theta                                   None\n",
+       "T                                         92\n",
+       "Name: 16, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.iloc[19]"
+    "data.iloc[16]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "79"
+       "92"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final = datetime.strptime(\"2019-9-25\", '%Y-%m-%d')\n",
+    "final = datetime.strptime(\"2019-10-08\", '%Y-%m-%d')\n",
     "startDay = datetime.strptime(\"2019-07-08\", '%Y-%m-%d')\n",
     "(final - startDay).days"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.024521575"
+       "0.0249479953125"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#ratePoints = [None, 0.0229471, 0.0250464, 0.0254817, 0.0255681, 0.0258563, 0.0263679, 0.0270334, 0.0279025, 0.0287345]\n",
-    "rate.getRiskFreeRate(79, ratePoints)"
+    "ratePoints = [None, 0.0229471, 0.0250464, 0.0254817, 0.0255681, 0.0258563, 0.0263679, 0.0270334, 0.0279025, 0.0287345]\n",
+    "rate.getRiskFreeRate(92, ratePoints)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#computePrice(data, dataType, indexToFind, timeShift, s0IsOne, rf, dt, s0Shock, sigmaShock)\n",
-    "[price_tmp, delta_tmp, gamma_tmp, vega_tmp, theta_tmp] = pm.computeCallData(data, 19, 0, False, 0.0229471, 1/365, 1, 1)"
+    "[price_tmp, delta_tmp, gamma_tmp, vega_tmp, theta_tmp] = pm.computeUOCData(data, 16, 0, False, 0.0249479953125, 1/365, 1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-97.38940036742503"
+       "-0.10197117201782113"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,22 +303,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12837124906080777"
+       "0.020834926361591552"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "price_tmp / data[\"startingPrice\"][19]"
+    "price_tmp / data[\"startingPrice\"][16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.040274548294574"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_tmp"
    ]
   },
   {
